--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week4lab",
+  "name": "week5lab",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.3.2"
   }
 }
